module(
    name = "com_google_j2cl_samples_helloworld",
)

bazel_dep(
    name = "com_google_j2cl",
)

local_path_override(
    module_name = "com_google_j2cl",
    path = "../..",
)

bazel_dep(
    name = "io_bazel_rules_closure",
)

# io_bazel_rules_closure is not available in BCR.
git_override(
    module_name = "io_bazel_rules_closure",
    commit = "6ddf3dffe709555eb5be0eb4530337db10305974",
    remote = "https://github.com/bazelbuild/rules_closure",
)

# io_bazel_rules_webtesting is not available in BCR.
git_override(
    module_name = "rules_webtesting",
    commit = "7a1c88f61e35ee5ce0892ae24e2aa2a3106cbfed",
    remote = "https://github.com/bazelbuild/rules_webtesting",
)

# rules_scala is not available in BCR, needed for rules_webtesting.
git_override(
    module_name = "rules_scala",
    commit = "219e63983e8e483e66ebf70372969ba227382001",
    remote = "https://github.com/mbland/rules_scala",
)

# google_bazel_common is not available in BCR.
git_override(
    module_name = "google_bazel_common",
    commit = "1a0839806501e7f7e8dd7663644895dbc593827e",
    remote = "https://github.com/google/bazel-common",
)

# Works around https://github.com/bazelbuild/rules_python/issues/1169
bazel_dep(
    name = "rules_python",
    version = "0.23.1",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    configure_coverage_tool = False,
    ignore_root_user_error = True,
    python_version = "3.11",
)