module(
    name = "com_google_j2cl_samples_helloworld",
)

bazel_dep(
    name = "j2cl",
    repo_name = "com_google_j2cl",
)

local_path_override(
    module_name = "j2cl",
    path = "../..",
)

bazel_dep(
    name = "rules_closure",
    version = "0.15.0",
    repo_name = "io_bazel_rules_closure",
)
