module(
    name = "j2cl_samples_helloworld",
)

_J2CL_VERSION = "20260402"

bazel_dep(
    name = "j2cl",
    version = _J2CL_VERSION,
)

bazel_dep(
    name = "rules_closure",
    version = "0.15.0",
)

bazel_dep(name = "rules_jvm_external", version = "6.6")

# Maven dependencies.
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
# TODO(b/532249785): we need to have an empty maven.install() here due to
#   https://github.com/bazel-contrib/rules_jvm_external/issues/1438
maven.install()
